--- a/cours 2.html
+++ b/cours 2.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>The Incredible Daily challenge</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barrio|Roboto" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -32,7 +35,7 @@
 
           <h2>Monte au sommet du classement</h2>
           <p>Nargue tes potes et deviens <strong>le numéro uno</strong></p>
-          <img src="/Users/Julien/Desktop/Code/1-4-ehDsnvYERqSGd2ENoe7A.jpeg" alt="classement daily challenge" width="300">
+          <img src="/Users/Julien/Documents/github/daily-challenge/Code/1-4-ehDsnvYERqSGd2ENoe7A.jpeg" alt="classement daily challenge" width="300">
 
        </section>
     </main>
