Cours Javascript, Partie 3
Personnalisation

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <span id="logo">The Daily Challenge </span>
         <ul>
           <li><a href="#apropos">A propos </a></li>
-          <li><a href="#download">Télécharger</a></li>
+          <li><a href="defis.html">Voir les défis</a></li>
         </ul>
       </nav>
     </header>
@@ -21,7 +21,7 @@
       <section id="baseline">
         <h1>Tentez de nouvelles expériences !</h1>
         <p>
-          <a href="#download">Démarrez maintenant</a>
+          <a href="defis.html">Voir tous les défis</a>
         </p>
       </section>
       <section id="apropos">
@@ -46,9 +46,6 @@
           <img src="https://media.giphy.com/media/bLiUT0AeHCkF2/giphy.gif" alt="picture description" width="300">
 </div>
        </section>
-       <section id="download">
-          L'application sera bientot disponible sur l'Apple Store et Google Play
-       </section>  
     </main>
     <footer>
       <p>Cette application est proposée le codecamp CMI Dauphine 2017 </p>
