Cours Javascript, Partie 4
Appel serveur

--- a/defis.html
+++ b/defis.html
@@ -40,4 +40,7 @@
 </section>
     </main>
   </body>
+  <footer>
+      <p>Cette application est proposée le codecamp CMI Dauphine 2017 </p>
+    </footer>
  </html>
