--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
        </section>
     </main>
     <footer>
-      <p>Cette application est proposée le codecamp CMI Dauphine 2017 </p>
+      <p>Cette application est proposée par le codecamp CMI Dauphine 2017 </p>
     </footer>
   </body>
 </html>
