--- a/defis.html
+++ b/defis.html
@@ -5,6 +5,7 @@
 	<title>The Daily challenge</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro|Pacifico" rel="stylesheet">
 	<link href="style3.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="script.js"></script>
   </head>
@@ -20,6 +21,9 @@
     </header>
 	<main>
     <section id="welcome">
+        <p>
+          <a href="index.html">Retour à la page d'accueil</a>
+        </p>
     </section>
 <section id="defis">
 <div class="defi">
@@ -41,6 +45,6 @@
     </main>
   </body>
   <footer>
-      <p>Cette application est proposée le codecamp CMI Dauphine 2017 </p>
+      <p>Cette application est proposée par le codecamp CMI Dauphine 2017 </p>
     </footer>
  </html>
