--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Daily challenge</title>
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro|Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="style3.css" rel="stylesheet" type="text/css">
@@ -28,22 +29,22 @@
 <div class="feature">
           <h2>Un défi chaque jour</h2>
           <p>Recevez <strong>de nouveaux challenges </strong> tous les jours </p>
-          <img src="https://media.giphy.com/media/AWv3UAFkgz39u/giphy.gif" alt="picture description" width="300">
+          <img src="https://media.giphy.com/media/cpRQzY4VS3V3W/giphy.gif" alt="picture description" width="300">
 </div>
 <div class="feature">
           <h2>Partagez vos exploits</h2>
           <p>Envoyez une photo ou une vidéo <strong> de vos exploits </strong> à vos amis</p>
-          <img src="    https://media.giphy.com/media/pWfzRNzOfHOvu/giphy.gif" alt="picture description" width="300">
+          <img src="https://media.giphy.com/media/l4FGkp93qEFCRKjT2/giphy.gif" alt="picture description" width="300">
 </div>
 <div class="feature">
           <h2>Suivez vos amis </h2>
           <p>Suivez les <strong> défis réalisés </strong>  par vos amis </p>
-          <img src="https://media.giphy.com/media/HzJfzaP8UzXc4/giphy.gif" alt="picture description" width="300">
+          <img src="https://media.giphy.com/media/X4YqmJEl6wJoY/giphy.gif" alt="picture description" width="300">
 </div>
 <div class="feature">
           <h2>Lancez des défis</h2>
           <p>Voter et proposer de  <strong>nouveaux défis</strong> à vos amis ou à la communauté</p>
-          <img src="https://media.giphy.com/media/bLiUT0AeHCkF2/giphy.gif" alt="picture description" width="300">
+          <img src="https://media.giphy.com/media/l0He1ff6BXsvA4ekM/giphy.gif" alt="picture description" width="300">
 </div>
        </section>
     </main>
