--- a/cours 2.html
+++ b/cours 2.html
@@ -25,18 +25,21 @@
         </p>
       </section>
       <section id="about">
+      <div class="feature">
           <h2>Un défi chaque jour</h2>
           <p>Recevez <strong>de nouveaux challenges </strong> tous les jours </p>
           <img src="https://media.giphy.com/media/AWv3UAFkgz39u/giphy.gif" alt="The daily challenge" width="300">
-
+      </div>
+      <div class="feature">
           <h2>Partage ton courage</h2>
           <p>Envoie ta réussite <strong>à tes amis</strong> et défie les à leur tour </p>
           <img src="https://media.giphy.com/media/csiXmoF8Kzza0/giphy.gif" alt="chaque jour un nouveau défi" width="300">
-
+      </div> 
+      <div class="feature">
           <h2>Monte au sommet du classement</h2>
           <p>Nargue tes potes et deviens <strong>le numéro uno</strong></p>
           <img src="/Users/Julien/Documents/github/daily-challenge/Code/1-4-ehDsnvYERqSGd2ENoe7A.jpeg" alt="classement daily challenge" width="300">
-
+      </div>
        </section>
     </main>
     <footer>
