--- a/Index.html
+++ b/Index.html
@@ -21,9 +21,11 @@
     <main>
       <section id="baseline">
         <h1>Tentez de nouvelles expériences !</h1>
+        <div class="carre">
         <p>
           <a href="defis.html">Voir tous les défis</a>
         </p>
+        </div>
       </section>
       <section id="apropos">
 <div class="feature">
