--- a/Index.html
+++ b/Index.html
@@ -21,9 +21,11 @@
     <main>
       <section id="baseline">
         <h1>Tentez de nouvelles expériences !</h1>
-        <p>
-          <button><a href="defis.html">Voir tous les défis</a></button>
-        </p>
+        <div class="container">
+  <div class="title">
+          <a href="defis.html">Voir tous les défis</a>
+    </div>
+</div>
       </section>
       <section id="apropos">
 <div class="feature">
