--- a/Index.html
+++ b/Index.html
@@ -21,11 +21,11 @@
     <main>
       <section id="baseline">
         <h1>Tentez de nouvelles expériences !</h1>
-        <div class="container">
-  <div class="title">
+        <div class="bouton">
+        <p>
           <a href="defis.html">Voir tous les défis</a>
-    </div>
-</div>
+        </p>
+        </div>
       </section>
       <section id="apropos">
 <div class="feature">
