--- a/Index.html
+++ b/Index.html
@@ -21,11 +21,9 @@
     <main>
       <section id="baseline">
         <h1>Tentez de nouvelles expériences !</h1>
-        <div class="bouton">
         <p>
-          <a href="defis.html">Voir tous les défis</a>
+          <bouton><a href="defis.html">Voir tous les défis</a></bouton>
         </p>
-        </div>
       </section>
       <section id="apropos">
 <div class="feature">
