--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
       <section id="baseline">
         <h1>Tentez de nouvelles expériences !</h1>
         <p>
-          <bouton><a href="defis.html">Voir tous les défis</a></bouton>
+          <button><a href="defis.html">Voir tous les défis</a></button>
         </p>
       </section>
       <section id="apropos">
